--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <p>Mi informacion personal, acerca de mis estudios, experiencia academica, proyectos, habilidades, 
                     etcetera, dentro de un curriculum vitae el cual puedes explorar. Puedes ver mi curriculum vitae, 
                     vinculado al siguiente boton</p>
-                <a href="src/CV_LeninArriaga.pdf" download="CV_LeninArriaga.pdf"><input type="button" value="Descargar CV"></a>
+                <a href="assets/CV_LeninArriaga.pdf" download="CV_LeninArriaga.pdf"><input type="button" value="Descargar CV"></a>
             </div>
             <div class="informacion">
                 <img src="img/teclado.jpeg" alt="cvitae" width="300" height="390">
