--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="#presentacion">Acerca</a></li>
                     <li><a href="#curriculum">Informacion</a></li>
                     <li><a href="#github">Proyectos</a></li>
-                    <li><a href="footer">Contactos</a></li>
+                    <li><a href="#contactos">Contactos</a></li>
                 </ul>
             </nav>
         </div>
@@ -78,7 +78,7 @@
     <br>
     <hr>
     <br><br>
-    <footer>
+    <footer id="contactos">
         <div class="redes">
             <h3>Contacta conmigo a traves de:</h3>
             <ul>
