--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     etcetera, dentro de un curriculum vitae el cual puedes explorar. Puedes ver mi curriculum vitae, 
                     vinculado al siguiente boton</p>
                 <a href="assets/CV_LeninArriaga.pdf" download="CV_LeninArriaga.pdf"><input type="button" value="Descargar CV"></a>
+                <a href="assets/Portafolio_Lenin.pdf" download="Portafolio_Lenin.pdf"><input type="button" value="Portafolio"></a>
             </div>
             <div class="informacion">
                 <img src="img/teclado.jpeg" alt="cvitae" width="300" height="390">
